| Bug #21642 | "configure" with no arguments does not build | ||
|---|---|---|---|
| Submitted: | 15 Aug 2006 0:03 | Modified: | 30 Aug 2006 19:43 |
| Reporter: | Antony Curtis | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S2 (Serious) |
| Version: | 5.2 | OS: | Linux (Linux) |
| Assigned to: | Jay Pipes | CPU Architecture: | Any |
| Tags: | compile, configure, innodb | ||
[15 Aug 2006 0:03]
Antony Curtis
[15 Aug 2006 2:11]
Bob Field
I get this same error from a bk pull of 5.2 taken this afternoon.
[15 Aug 2006 16:26]
MySQL Verification Team
Thank you for the bug report.
[21 Aug 2006 15:02]
Jay Pipes
Patch submitted to main tree. Magnus and Elliot have been in touch to review and test patch.
[23 Aug 2006 17:58]
Bob Field
I took BK pulls of 5.1 and 5.2 this morning. 5.1 builds fine, 5.2 still has this same problem.
[29 Aug 2006 10:22]
Mads Martin Joergensen
This have been fixed in 5.1 and is no longer a showstopper for 5.1, thus move it to 5.2.
[30 Aug 2006 19:43]
Paul DuBois
No changelog entry needed (even though it's a showstopper, because it can't have affected a previous version).
[24 Sep 2006 0:22]
Bob Field
I am able to get a good build of 5.2 now.
