Fix for bug #21642: "configure" with no arguments does not build